package com.carcafe.vmprovisioningapi.model;

public interface NetworkProvisioner {
    void configurarRed(String nombreRed);
}
