package com.carcafe.vmprovisioningapi.model;

public interface StorageProvisioner {
    void crearDisco(int sizeGB, boolean encriptado);
}
